# oas/catalog-api.yaml
@@ -1,73 +1,94 @@
-openapi: 3.0.1
+openapi: "3.0.3"
 info:
-  title: Catalog Service OpenAPI definition
-  version: v1
+  title: "catalog_service API"
+  description: "catalog_service API"
+  version: "1.0.0"
 servers:
-  - url: http://localhost:8080
-    description: Catalog Service
-
+  - url: "https://localhost:8080"
 paths:
-  /api/v1/items:
+  /api/v1/equipments:
     get:
-      tags:
-        - items
-      summary: Returns items
-      operationId: getItems
+      summary: "GET api/v1/equipments"
+      operationId: "get"
+      parameters:
+        - name: "parameters"
+          in: "query"
+          required: false
+          schema:
+            type: "string"
+        - name: "page"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+            default: "0"
+        - name: "size"
+          in: "query"
+          required: false
+          schema:
+            type: "integer"
+            format: "int32"
+            default: "20"
       responses:
         "200":
-          description: OK
+          description: "OK"
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/ItemsResponses'
-        "400":
-          description: BAD_REQUEST
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Equipment"
+  /api/v1/data/process:
+    post:
+      summary: "POST api/v1/data/process"
+      operationId: "process"
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/DataProcessingPayload"
+      responses:
+        "200":
+          description: "OK"
           content:
             '*/*':
               schema:
-                $ref: '#/components/schemas/Exception'
-        "401":
-          description: NOT_AUTHORIZED
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Exception'
-        "403":
-          description: FORBIDDEN
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Exception'
-        "404":
-          description: NOT_FOUND
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Exception'
-        "500":
-          description: UNEXPECTED_EXCEPTIOn
-          content:
-            '*/*':
-              schema:
-                $ref: '#/components/schemas/Exception'
+                type: "array"
+                items:
+                  $ref: "#/components/schemas/Equipment"
 
 components:
   schemas:
-    ItemsResponses:
-      type: array
-      items:
-        $ref: '#/components/schemas/ItemResponse'
-    ItemResponse:
-      type: object
+    BigDecimal:
+      type: "object"
+      properties: { }
+    Equipment:
+      type: "object"
       properties:
-        name:
-          type: string
-        description:
-          type: string
-        price:
-          type: string
-    Exception:
-      type: object
+        id:
+          type: "string"
+        brandName:
+          type: "string"
+        details:
+          type: "string"
+        sizes:
+          type: "array"
+          items:
+            type: "string"
+        mrp:
+          type: "string"
+        sellPrice:
+          $ref: "#/components/schemas/BigDecimal"
+        discount:
+          $ref: "#/components/schemas/BigDecimal"
+        category:
+          type: "string"
+    DataProcessingPayload:
+      type: "object"
       properties:
-        message:
-          type: string
+        uris:
+          type: "array"
+          items:
+            type: "string"
+            format: "uri"
