# src/main/java/by/vk/catalog/api/EquipmentApi.java
@@ -3,11 +3,9 @@ package by.vk.catalog.api;
 import by.vk.catalog.api.repository.Equipment;
 import by.vk.catalog.api.service.EquipmentService;
 import java.util.Map;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.elasticsearch.core.SearchHits;
-import org.springframework.data.web.PageableDefault;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.ResponseStatus;
@@ -18,11 +16,12 @@ import reactor.core.publisher.Flux;
 @RequestMapping("/api/v1/equipments")
 public record EquipmentApi(EquipmentService service) {
 
-  @PostMapping
+  @GetMapping
   @ResponseStatus(HttpStatus.OK)
-  public Flux<Equipment> get(@RequestParam Map<String, String> parameters,
-      @PageableDefault(size = 20) Pageable pageable) {
-    return service.search(parameters, pageable);
+  public Flux<Equipment> get(@RequestParam(required = false) Map<String, String> parameters,
+      @RequestParam(value = "page", defaultValue = "0") int page,
+      @RequestParam(value = "size", defaultValue = "20") int size) {
+    return service.search(parameters, PageRequest.of(page, size));
   }
 
 }
